--- a/package.json
+++ b/package.json
@@ -23,12 +23,16 @@
   },
   "homepage": "https://github.com/khanhvu145/dental_clinic#readme",
   "dependencies": {
+    "axios": "^0.24.0",
+    "bcryptjs": "^2.4.3",
     "ejs": "^3.1.6",
     "express": "^4.17.1",
     "express-ejs-layouts": "^2.5.1",
     "express-fileupload": "^1.2.1",
     "express-session": "^1.17.2",
+    "fullcalendar": "^5.10.1",
     "method-override": "^3.0.0",
+    "moment": "^2.29.1",
     "mongoose": "^5.13.7",
     "multer": "^1.4.3"
   },
